--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,7 @@ body{
   margin-bottom: 20px;
   margin-top: 30px;
   float: right;
+  margin-right: 30px;
 }
 .custom-header{
   margin-left: 10px;
