--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,34 +51,44 @@ body{
 .button-row{
   margin-top: 10px;
   margin-left: 1px;
-  margin-right: 1px;
 }
 .quill-title{
   background-color: white;
   border-radius: 3px;
-  border-style: none;
+  margin-left:30px;
+  height:50px;
+  margin-right:5px;
+  border-bottom: 1px inset;
 }
 .quill-editor{
   background: white;
   height: 400px;
-  margin:30px;
+  margin-left:30px;
+
+  margin-right: 5px;
   border-radius: 3px;
   border-style: none;
 }
 .note-timestamp{
-  margin-top: 10px;
+  margin-left:30px;
+  margin-bottom: 20px;
+  float:left;
+  margin-top: 13px;
   text-align: center;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: lighter;
 }
+.note_action_button{
+  margin-right:-10px;
+  margin-bottom: 20px;
+  float: right;
+  margin-top: 10px;
+}
 .sync-button{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 5px;
 }
 .analyse-button{
-  margin-top: 5px;
+  margin-top: 10px;
   margin-left: 5px;
-}
-footer{
-  padding-top:15px;
 }
