--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,94 +1,103 @@
-.App {
-  text-align: center;
-}
-body{
-  background-color: #f4f4f4;
-}
-.custom-app{
-  margin-left: 30px;
-  margin-right: 30px;
-  padding: 10px;
-}
-.header{
-  margin-left:30px;
-  margin-bottom: 20px;
-  float: left;
-}
-.new_note{
-  margin-bottom: 20px;
-  margin-top: 30px;
-  float: right;
-  margin-right: 30px;
-}
-.custom-header{
-  margin-left: 10px;
-  padding-bottom: 50px;
-}
-.custom-note-tile:hover{
-  background-color: #fffcff;
-  transform: scale(1.05);
-}
-.custom-note-tile{
-  transition: all .2s ease-in-out;
-  background-color: #fffcfc;
-  padding:10px;
-  border-radius: 10px;
-  /*box-shadow: 5px 5px black;*/
-}
-.card-col{
-  margin:10px;
-}
-.glyphicon-plus-sign{
-  padding: 5px;
-}
-.create-new-note{
-  padding: 2px;
-  transform: scale(1.05);
-}
-.create-new-note:hover{
-  transition: all .2s ease-in-out;
-}
-.button-row{
-  margin-top: 10px;
-  margin-left: 1px;
-}
-.quill-title{
-  background-color: white;
-  border-radius: 3px;
-  margin-left:30px;
-  height:50px;
-  margin-right:5px;
-  border-bottom: 1px inset;
-}
-.quill-editor{
-  background: white;
-  height: 400px;
-  margin-left:30px;
-
-  margin-right: 5px;
-  border-radius: 3px;
-  border-style: none;
-}
-.note-timestamp{
-  margin-left:30px;
-  margin-bottom: 20px;
-  float:left;
-  margin-top: 13px;
-  text-align: center;
-  font-size: 13px;
-  font-weight: lighter;
-}
-.note_action_button{
-  margin-right:-10px;
-  margin-bottom: 20px;
-  float: right;
-  margin-top: 10px;
-}
-.sync-button{
-  margin-top: 10px;
-  margin-left: 5px;
-}
-.analyse-button{
-  margin-top: 10px;
-  margin-left: 5px;
-}
+  .App {
+    text-align: center;
+  }
+  body{
+    background-color: #f4f4f4;
+  }
+  .custom-app{
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 10px;
+  }
+  .header{
+    margin-left:30px;
+    margin-bottom: 20px;
+    float: left;
+  }
+  .new_note{
+    margin-bottom: 20px;
+    margin-top: 30px;
+    float: right;
+    margin-right: 30px;
+  }
+  .custom-header{
+    margin-left: 10px;
+    padding-bottom: 50px;
+  }
+  .custom-note-tile:hover{
+    background-color: #fffcff;
+    transform: scale(1.05);
+  }
+  .custom-note-tile{
+    transition: all .2s ease-in-out;
+    background-color: #fffcfc;
+    padding:10px;
+    border-radius: 10px;
+    /*box-shadow: 5px 5px black;*/
+  }
+  .card-col{
+    margin:10px;
+  }
+  .glyphicon-plus-sign{
+    padding: 5px;
+  }
+  .create-new-note{
+    padding: 2px;
+    transform: scale(1.05);
+  }
+  .create-new-note:hover{
+    transition: all .2s ease-in-out;
+  }
+  .button-row{
+    margin-top: 10px;
+    margin-left: 1px;
+  }
+  .quill-title:hover{
+    transform: scale(1.01);
+    box-shadow: 0.5px 0.5px 0.5px 0.5px #b5d1ff;
+  }
+  .quill-title{
+    transition: all .2s ease-in-out;
+    background-color: white;
+    border-radius: 3px;
+    margin-left:30px;
+    height:50px;
+    margin-right:5px;
+    border-bottom: 1px inset;
+  }
+  .quill-editor:hover{
+    transform: scale(1.01);
+    box-shadow: 0.5px 0.5px 0.5px 0.5px #b5d1ff;
+  }
+  .quill-editor{
+    transition: all .2s ease-in-out;
+    background: white;
+    height: 400px;
+    margin-left:30px;
+    margin-right: 5px;
+    border-radius: 3px;
+    border-style: none;
+  }
+  .note-timestamp{
+    margin-left:30px;
+    margin-bottom: 20px;
+    float:left;
+    margin-top: 13px;
+    text-align: center;
+    font-size: 13px;
+    font-weight: lighter;
+  }
+  .note_action_button{
+    margin-right:-10px;
+    margin-bottom: 20px;
+    float: right;
+    margin-top: 10px;
+  }
+  .sync-button{
+    margin-top: 10px;
+    margin-left: 5px;
+  }
+  .analyse-button{
+    margin-top: 10px;
+    margin-left: 5px;
+  }
