--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,8 @@
     background-color: #f4f4f4;
   }
   .custom-app{
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 5px;
+    margin-right: 5px;
     padding: 10px;
   }
   .header{
@@ -35,6 +35,9 @@
     border-radius: 10px;
     /*box-shadow: 5px 5px black;*/
   }
+  .note_tiles{
+    justify-content:space-between !important;
+  }
   .card-col{
     margin:10px;
   }
@@ -60,9 +63,9 @@
     transition: all .2s ease-in-out;
     background-color: white;
     border-radius: 3px;
-    margin-left:30px;
+    margin-left:10px;
     height:50px;
-    margin-right:5px;
+    margin-right:10px;
     border-bottom: 1px inset;
   }
   .quill-editor:hover{
@@ -73,8 +76,8 @@
     transition: all .2s ease-in-out;
     background: white;
     height: 400px;
-    margin-left:30px;
-    margin-right: 5px;
+    margin-left:10px;
+    margin-right: 10px;
     border-radius: 3px;
     border-style: none;
   }
@@ -88,16 +91,18 @@
     font-weight: lighter;
   }
   .note_action_button{
-    margin-right:-10px;
+    margin-right:10px;
     margin-bottom: 20px;
     float: right;
     margin-top: 10px;
   }
   .sync-button{
     margin-top: 10px;
+    margin-right:10px;
     margin-left: 5px;
   }
   .analyse-button{
     margin-top: 10px;
     margin-left: 5px;
+
   }
